# ecn_ran

./: .gitignore  CMakeLists.txt  README.md  test.sh
cmake/: kernel-config.cmake
deploy/rfsim5g/: README.md
src/: main.c
test/: CMakeLists.txt  listener.c  talker.c
